test/negative/704_tag_on_nonvariant.fx
// expect: non-variant
val x = 5
println(x.__tag__)
